...

      ],
      "fillColor": "#800000",
      "strokeColor": "#000000",
      "popUp": { 
      "name": "John Molson School of Business",
      "address": "1450 Rue Guy, Montréal, QC H3H 0A1",
      "codes": "Class Codes: MSB, MB, SB, S"
    },
    "markerCoord": {"latitude": 45.49518949486195, "longitude": -73.5789761223161}
    },
    {
      "name": "Faubourg Tower",
...
        { "latitude": 45.49716708420179, "longitude": -73.57954280176037 },
        { "latitude": 45.496836189202625, "longitude": -73.57885079183858 },
        { "latitude": 45.49737389258885, "longitude": -73.57834653654672 }
      ],
      "fillColor": "#800000", 
      "strokeColor": "#000000",
      "popUp": { "name": "Henry F.Hall Building","address":"1515 Saint-Catherine St, Montreal, QC H3G 1S6", "codes":"Class Codes: H" },
      "markerCoord": { "latitude": 45.49727236766702, "longitude": -73.57874382879905 }
    },
    {
      "name": "Centre for Structural and Functional Genomics (GE)",
      "coordinates": [
        { "latitude": 45.45679964289688, "longitude": -73.64035423599351 },
...
      { latitude: 45.45914278579167, longitude: -73.6381960251453 },
      { latitude: 45.459291749810085, longitude: -73.6386241072904 },
      { latitude: 45.458930633676275, longitude: -73.63891725960285 },
      ],
      "fillColor": "#800000",
      "strokeColor": "#000000",
      "popUp": { "name": "Vanier Library Building","address": "7141 Sherbrooke St W, Montreal, Quebec H4B 1R6", "codes":"Class Codes: VL"},
      "markerCoord": { "latitude": 45.45910034196574,  "longitude": -73.63869257592627 }
      },
      {
        "name": "Vanier Extension",
        "coordinates": [
          { latitude: 45.458934357795, longitude: -73.63895569145663 },
...
