...
import SearchResults from '../utilities/SearchResults.js';
import TransitScreen from './transitOptions.js';
import RouteInfoContainer from './RouteInfoContainer.js';
import { style } from './styles/indoorMapScreenStyles.js';

const IndoorMapDirections = () => {
    const [campus, setCampus] = useState('SGW');
    const [zoomLevel, setZoomLevel] = useState(0.005);
    const mapRef = useRef(null);
    const [userLocation, setUserLocation] = useState(null);
    const [centerOnUserLocation, setCenterOnUserLocation] = useState(true);
    const [isUserLocationFetched, setIsUserLocationFetched] = useState(false);
    const [activeButton, setActiveButton] = useState('SGW');
...
                                  </TouchableOpacity>
                                  <TouchableOpacity
                            style={activeButton === 'Loyola' ? styles.loyolaButtonActive : styles.loyolaButton}
                            onPress={handleSelectLoyola}
                            testID="loyolaButton"
                          >
                            <Text style={activeButton === 'Loyola' ? styles.highlightedText : styles.normalText}>LOY</Text>
                          </TouchableOpacity>

                          {showPath && (
                          <TouchableOpacity
                            style={{
                              backgroundColor: wheelChairToggle ? 'green' : '#800000',
...
