...
import MaterialIcons from 'react-native-vector-icons/MaterialIcons';
import SearchBar from '../utilities/SearchBar.js';
import SearchResults from '../utilities/SearchResults.js';


const MapScreen = ({route}) => {
  const [campus, setCampus] = useState('SGW');
  const [zoomLevel, setZoomLevel] = useState(0.005); 
  const [selectedBuilding, setSelectedBuilding] = useState(null); 
  const mapRef = useRef(null);
  const [selectedMarker, setSelectedMarker] = useState(null);
  const [selectedPOI, setSelectedPOI] = useState(null);
  const [showDirections, setShowDirections] = useState(false);
...
  };

  const handleClosePopup = () => {
    setSelectedBuilding(null);
  };
  const destinationLocation = campus === 'SGW' ? campusLocations.Loyola : campusLocations.SGW;
  const directionsText = campus === 'SGW' ? 'Directions To LOY' : 'Directions To SGW';

  // Gets direction data from the TransitOptions component and returns it to the map screen.
  const handleDirectionsToMap = (eta, distance) => {
    setEta(eta);
    setDistance(distance);
  }
...
            
            <TouchableOpacity
              style={activeButton === 'Loyola' ? styles.loyolaButtonActive : styles.loyolaButton}
              onPress={handleSelectLoyola}
              testID="loyolaButton"
            >
              <Text style={activeButton === 'Loyola' ? styles.highlightedText : styles.normalText}>LOY</Text>
            </TouchableOpacity>
            
            <TouchableOpacity
              style={activeButton === 'user' ? styles.userLocationButtonActive : styles.userLocationButton}
              onPress={handleUserLocation}
              testID="userLocationButton"
            >
              <Icon name="user" size={20} color={activeButton === 'user' ? 'blue' : 'white'} />
            </TouchableOpacity>
            
            {activeButton !== 'user' && (
              <TouchableOpacity 
                style={(!activeCampusDirections) ? styles.directionsButton : styles.directionsButtonActive} 
                onPress={handleCampusDirections} 
                testID="directions-button"
              >
                <Text style={(!activeCampusDirections) ? styles.directionsButtonText: styles.highlightedText}>{(!activeCampusDirections) ? directionsText : "Cancel Directions"}</Text>
              </TouchableOpacity>
            )}
            
            <TouchableOpacity style={styles.directionsButton} onPress={handleBuildingDirections}>
              <Text style={styles.directionsButtonText}>Building Directions</Text>
            </TouchableOpacity>
...
      </MapView>
      
      {currentScreen === "Map" ? (
        <BuildingPopup
          building={selectedBuilding}
          onClose={handleClosePopup}
          testID="building-popup" 
        />
      ) : null}
      
      {currentScreen === 'Building Map Directions' ? (
        <TouchableOpacity
          style={styles.directionsButton}
...
