...
            destination={{ latitude: stop.latitude, longitude: stop.longitude }}
            apikey={API_KEY}
            strokeWidth={4}
            strokeColor="blue"
          />
          <Marker
                  testID={`shuttle-directions`}
                  zIndex={10}
                  coordinate={location}
                >
                  <Text note style={{ color: "#800000", fontSize: 10 }}>
                  </Text>
                </Marker>
                </View>
      )}

      <View style={styles.container}>
        <Text style={styles.title}>Directions</Text>
        <ScrollView style={styles.directionsContainer}>
          {directions.length > 0 ? (
            directions.map((step, index) => (
              <View
                key={step.id}
                style={[styles.step, index % 2 === 0 ? styles.evenRow : styles.oddRow]}
...
