const shuttleStops = [
    {
        keyID:1,
        latitude:45.497163,
        longitude:-73.578535,
        title:'SGW Shuttle Bus Stop',
    },
    {
        keyID:2,
        latitude:45.458424,
        longitude:-73.638369,
        title:'Loyola Shuttle Bus Stop',
    }
];

export default shuttleStops;